  * Added Winstart SSD1306 64x48 OLED variant (issue 522)
  * Added support for JLX240160 (issue 556)
  * Added support for JLX12864 (ST7565 variant, issue 440)
  * Added support for JLX256160 (issue 561)
  * Added support for SH1122 256x64 OLED (issue 420)
  * Added open iconic icons (issue 535)
  * Added several Persian fonts (issue 541)
  * Added additional Japanese font variants (issue 581)
  * Added Devanagari/Hindi font variant (issue 584)
  * Added tom-thumb font (issue 563)
  * Added AVR specific optimization for 3-wire Software SPI (issue 586)
 2018-08-24	v2.23.18  olikraus@gmail.com
  * NEW FONT FORMAT for speedup of the unicode font section (issue 596)  
  * Fixed a bug in the font construction for monospaced fonts (issue 669) 
  * Fixed a bug with the CS line for huge KS0108 displays (issue 631)
  * Fixed #if's for some AVR uC (issue 662)
  * Added support for SH1108 controller (issue 619)
  * Added support for T6963 160x80 Displays (issue 635)
  * Added support for EA W128128 (issue 641)
  * Added support for LC7981 240x64 (issue 642)  
  * Added support for ST7567 ENH-DG128064 (issue 616)
  * Included pull request for ST7586, support for ERC240160 & s028hn118a (pull request 660)
  * Added SpaceTrash game (issue 622)
  * Added contributed 7-segment font, https://github.com/olikraus/u8g2/wiki/fntgrpu8g#7segments_26x42 (issue 634)
  * Added several fonts from fontstruct.com, https://github.com/olikraus/u8g2/wiki/fntgrpfontstruct (issue 687)#
    This also includes several outline fonts.
 2018-10-28	v2.24.3  olikraus@gmail.com
  * Added clip window support (issue 364)
  * Added setBusClock() proc to change the I2C/SPI bus clock speed (Arduino only, issue 705)
  * Added sleep mode for ST7920 (issue 245)
  * Added support for SSD0323 (issue 720)
2018-xx-xx	v2.25.x  olikraus@gmail.com
  * Improved speed for I2C with SSD1306 controller: 4% faster now (issue 735)
  * Fixed code problems (issues 766 and 754)  
  * Added battery and emoticons (issue 747)
  